--- a/src/styles/components/_card.scss
+++ b/src/styles/components/_card.scss
@@ -209,6 +209,12 @@
       border: none;
       border-radius: 20px 20px 6px 20px;
     }
+
+    .comment-container.other{
+      background: #80aadf;
+      border: none;
+      border-radius: 20px 20px 6px 20px;
+    }
     .comment-container {
       display: grid;
       grid-template-columns: 50px 1fr;
@@ -245,6 +251,7 @@
           }
           span {
             transform: translate(6px, 3px);
+            color: #333 !important;
             cursor: pointer;
 
             img{
@@ -344,7 +351,8 @@
 
       input[type="text"] {
         width: 100%;
-        background: $color-4;
+        background: #fff;
+        border: 1px solid $color-4;
         border-radius: 20px 20px 6px 20px;
         padding: 20px;
         font-size: 1.4rem;
