--- a/src/styles/components/_card.scss
+++ b/src/styles/components/_card.scss
@@ -12,6 +12,7 @@
   @media screen and(max-width: 590px) {
     grid-template-columns: 1fr;
   }
+
   @media screen and(max-width: 440px) {
     padding-top: 26px;
   }
@@ -39,6 +40,7 @@
         border-radius: 14px;
       }
     }
+
     @media screen and(max-width: 590px) {
       position: absolute;
       transform: translate(17px, 18px);
@@ -49,6 +51,7 @@
     @media screen and(max-width: 590px) {
       margin-left: 18px;
     }
+
     .card-header {
       display: flex;
       justify-content: space-between;
@@ -69,6 +72,7 @@
         @media screen and(max-width: 590px) {
           margin-left: 52px;
         }
+
         @media screen and(max-width: 440px) {
           transform: translateY(-18px);
         }
@@ -97,6 +101,7 @@
           .fas {
             color: $color-1;
           }
+
           .far {
             color: $color-2;
           }
@@ -112,6 +117,7 @@
         }
       }
     }
+
     p {
       margin: 3px 0 9px;
       font-size: 1.1rem;
@@ -120,6 +126,7 @@
         margin-top: -18px;
       }
     }
+
     .update-post {
       textarea {
         font-size: 1.3rem;
@@ -127,6 +134,7 @@
         padding: 10px;
         border-radius: 20px 20px 6px 20px;
       }
+
       .button-container {
         .btn {
           background: $color-2;
@@ -140,18 +148,21 @@
         }
       }
     }
+
     .card-pic {
       width: 100%;
       border-radius: 6px;
       margin-top: 12px;
       box-shadow: 0 0 3px rgba(51, 51, 51, 0.342);
     }
+
     iframe {
       width: 100%;
       min-height: 330px;
       border-radius: 6px;
       box-shadow: 0 0 3px rgba(51, 51, 51, 0.342);
     }
+
     .button-container {
       justify-content: flex-end;
       display: flex;
@@ -159,7 +170,7 @@
       div {
         padding: 5px 9px;
         margin-left: 5px;
-        background: $color-2;
+        border: 1px solid $color-1;
         border-radius: 50px;
         transition: 0.1s;
         cursor: pointer;
@@ -175,6 +186,7 @@
         }
       }
     }
+
     .card-footer {
       display: flex;
       align-items: center;
@@ -192,6 +204,7 @@
           transform: scale(1.2);
         }
       }
+
       .comment-icon,
       .like-container {
         display: flex;
@@ -204,17 +217,20 @@
         }
       }
     }
-    .comment-container.client {
-      background: $color-4;
-      border: none;
-      border-radius: 20px 20px 6px 20px;
-    }
 
-    .comment-container.other{
+    .comment-container.client {
       background: #80aadf;
       border: none;
       border-radius: 20px 20px 6px 20px;
     }
+
+    .comment-container.other {
+      background: #fff;
+      color: #333 !important;
+      border: 1px solid $color-1;
+      border-radius: 20px 20px 6px 20px;
+    }
+
     .comment-container {
       display: grid;
       grid-template-columns: 50px 1fr;
@@ -235,6 +251,7 @@
           width: 37px;
         }
       }
+
       .comment-header {
         display: flex;
         justify-content: space-between;
@@ -249,12 +266,13 @@
           h3 {
             font-family: $font-1;
           }
+
           span {
             transform: translate(6px, 3px);
             color: #333 !important;
             cursor: pointer;
 
-            img{
+            img {
               box-shadow: none;
               height: 15px;
               width: 15px;
@@ -268,11 +286,14 @@
           font-family: $font-1;
         }
       }
+
       p {
         margin-top: 8px;
       }
+
       .edit-comment {
         color: $color-2;
+
         img {
           float: right;
           margin-left: 10px;
@@ -289,6 +310,7 @@
 
         .edit-comment-form {
           margin-top: 14px;
+
           label {
             background: $white;
             color: $color-1;
@@ -303,6 +325,7 @@
               transform: scale(1.05);
             }
           }
+
           input[type="text"] {
             margin: 4px 0;
             background: $white;
@@ -311,6 +334,7 @@
             width: 100%;
             border-radius: 6px 20px 6px 20px;
           }
+
           .btn {
             display: flex;
             align-items: center;
@@ -332,6 +356,7 @@
                 transform: translate(-5px, 0);
               }
             }
+
             input[type="submit"] {
               background: $color-2;
               width: inherit;
@@ -346,6 +371,7 @@
         }
       }
     }
+
     .comment-form {
       margin-top: 6px;
 
@@ -361,6 +387,7 @@
           box-shadow: 0 0 2px rgba(51, 51, 51, 0.5);
         }
       }
+
       input[type="submit"] {
         margin-top: 4px;
         padding: 12px 16px;
@@ -376,6 +403,7 @@
           width: 130px;
         }
       }
+
       button {
         float: right;
         background: $color-1;
@@ -386,6 +414,7 @@
         }
       }
     }
+
     .like-container {
       span {
         font-size: 1.02rem;
@@ -393,15 +422,18 @@
         transform: translate(8px, -1px);
       }
     }
+
     .fa-share-alt {
       transform: translate(0, 2px);
     }
   }
+
   .update-post {
     textarea {
       width: 100% !important;
       height: 80px;
     }
+
     .button-container {
       text-align: right;
 
