--- a/src/styles/components/_friendsHint.scss
+++ b/src/styles/components/_friendsHint.scss
@@ -1,6 +1,6 @@
 .get-friends-container {
   width: 356px;
-  background: linear-gradient(145deg, $color-2 30%, #ffe1d9 100%);
+  background: linear-gradient(145deg, $color-2 30%, #efefef 100%);
   border-radius: 20px;
   padding: 20px 20px 10px;
 
