--- a/src/styles/_settings.scss
+++ b/src/styles/_settings.scss
@@ -11,9 +11,9 @@
   src: url(./assets/fonts/JosefinSans-Bold.ttf);
 }
 
-$font-1: "font-1", sans-serif;
-$font-2: "font-2", serif;
-$font-3: "font-3", serif;
+$font-1: "Segoe UI", sans-serif;
+$font-2: "Segoe UI", serif;
+$font-3: "Segoe UI", serif;
 
 $color-1: #0c50a2;
 $color-2: #6585ac;
